[gd_scene load_steps=26 format=2]

[ext_resource path="res://FinalBoss/DemonAttack/attack1_1.png" type="Texture" id=1]
[ext_resource path="res://FinalBoss/DemonAttack/attack1_6.png" type="Texture" id=2]
[ext_resource path="res://FinalBoss/DemonAttack/attack1_3.png" type="Texture" id=3]
[ext_resource path="res://FinalBoss/DemonAttack/attack1_5.png" type="Texture" id=4]
[ext_resource path="res://FinalBoss/DemonAttack/attack1_2.png" type="Texture" id=5]
[ext_resource path="res://FinalBoss/DemonAttack/attack1_4.png" type="Texture" id=6]
[ext_resource path="res://FinalBoss/DemonIdle/ready_3.png" type="Texture" id=7]
[ext_resource path="res://FinalBoss/DemonIdle/ready_1.png" type="Texture" id=8]
[ext_resource path="res://FinalBoss/DemonIdle/ready_2.png" type="Texture" id=9]
[ext_resource path="res://FinalBoss/DemonRun/run_4.png" type="Texture" id=10]
[ext_resource path="res://FinalBoss/DemonRun/run_5.png" type="Texture" id=11]
[ext_resource path="res://FinalBoss/DemonRun/run_6.png" type="Texture" id=12]
[ext_resource path="res://FinalBoss/DemonIdle/ready_4.png" type="Texture" id=13]
[ext_resource path="res://FinalBoss/DemonRun/run_1.png" type="Texture" id=14]
[ext_resource path="res://FinalBoss/DemonRun/run_2.png" type="Texture" id=15]
[ext_resource path="res://FinalBoss/DemonRun/run_3.png" type="Texture" id=16]
[ext_resource path="res://BossProgressBar.gd" type="Script" id=17]
[ext_resource path="res://FinalBoss/DemonIdle/ready_5.png" type="Texture" id=18]
[ext_resource path="res://FinalBoss/DemonIdle/ready_6.png" type="Texture" id=19]
[ext_resource path="res://FinalBoss.gd" type="Script" id=40]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Run",
"speed": 7.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": false,
"name": "AxeAttack",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.33333
height = 12.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 21.25, 32 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.482353, 0.0862745, 0.0862745, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=6]
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="FinalBoss" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 40 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, 5.66667 )
scale = Vector2( 1, 0.8 )
frames = SubResource( 1 )
animation = "AxeAttack"
frame = 3

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2( 0.333333, 16.6667 )
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 29.0833, 0.333333 )
shape = SubResource( 4 )
disabled = true

[node name="DetectBoxRight" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectBoxRight"]
position = Vector2( 26.5001, 0 )
shape = SubResource( 4 )

[node name="DetectBoxLeft" type="Area2D" parent="."]
position = Vector2( -78.3333, 0.333333 )
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectBoxLeft"]
position = Vector2( 52.6665, 0 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 61, 8 )
scale = Vector2( 1.3, 0.8 )

[node name="BossProgressBar" type="ProgressBar" parent="Control"]
margin_left = -9.0
margin_top = -1.66667
margin_right = 10.0
margin_bottom = 0.333333
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
value = 50.0
rounded = true
percent_visible = false
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="DetectBoxRight" to="." method="_on_DetectBoxRight_body_entered"]
[connection signal="body_exited" from="DetectBoxRight" to="." method="_on_DetectBoxRight_body_exited"]
[connection signal="body_entered" from="DetectBoxLeft" to="." method="_on_DetectBoxLeft_body_entered"]
[connection signal="body_exited" from="DetectBoxLeft" to="." method="_on_DetectBoxLeft_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
